엔티티 구조 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=LectureMapping
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/new_schema
+spring.datasource.username=root
+spring.datasource.password=insungmms57
 
 spring.jpa.hibernate.ddl-auto=create
 
@@ -10,3 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=create
 
 sungkyunkwan.lectures.department=culture,classicalChinese
+
+spring.jpa.properties.hibernate.jdbc.batch_size=3000
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.order_inserts=true
