--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation 'org.jsoup:jsoup:1.17.2'
 	implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
 	implementation 'com.google.code.gson:gson:2.10.1'
+
+	implementation 'com.mysql:mysql-connector-j'
 }
 
 tasks.named('test') {
